# task-supervisor

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
examples/: simple.rs
src/: lib.rs  messaging.rs  supervisor.rs  task.rs  task_group.rs
src/supervisor/: builder.rs  handle.rs  mod.rs
src/task/: mod.rs
src/utils/: mod.rs
tests/: test_clone_semantics.rs  test_configuration.rs  test_handle.rs  test_supervisor.rs  test_tasks.rs  test_threshold.rs  test_wait.rs
tests/common/: mod.rs
