[package]
name = "task-supervisor"
version = "0.4.1"
edition = "2021"
rust-version = "1.75"
categories = ["asynchronous"]
description = "Supervisor for long-lived tokio tasks"
authors = ["akhercha <adel@pragma.build>"]
keywords = ["tasks", "tokio", "supervisor"]
repository = "https://github.com/akhercha/task-supervisor"
license = "MIT"

[features]
anyhow = ["dep:anyhow"]
tracing = ["dep:tracing"]

[dependencies]
tokio = { version = "^1", features = [
  "rt-multi-thread",
  "sync",
  "macros",
  "time",
] }
tokio-util = "0.7"
thiserror = "2"

anyhow = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "^1", features = [
  "rt-multi-thread",
  "sync",
  "macros",
  "time",
  "test-util",
] }
anyhow = "1"
